syntax = "proto3";

import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyInviteRequest.proto";
import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyKickRequest.proto";
import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyAcceptRequest.proto";
import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyDeclineRequest.proto";
import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyLeaveRequest.proto";
import "IO/Network/Relay/World/Server/Protos/Requests/RWSPartyPassMasterRequest.proto";

import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyInviteResponse.proto";
import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyKickResponse.proto";
import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyAcceptResponse.proto";
import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyDeclineResponse.proto";
import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyLeaveResponse.proto";
import "IO/Network/Relay/World/Server/Protos/Responses/RWSPartyPassMasterResponse.proto";

option csharp_namespace = "SoulCore.IO.Network.Relay.World.Server.Protos";

service RWSPartyProto
{
    rpc Invite (RWSPartyInviteRequest) returns (RWSPartyInviteResponse);
    rpc Kick (RWSPartyKickRequest) returns (RWSPartyKickResponse);
    rpc Accept (RWSPartyAcceptRequest) returns (RWSPartyAcceptResponse);
    rpc Decline (RWSPartyDeclineRequest) returns (RWSPartyDeclineResponse);
    rpc Leave (RWSPartyLeaveRequest) returns (RWSPartyLeaveResponse);
    rpc PassMaster (RWSPartyPassMasterRequest) returns (RWSPartyPassMasterResponse);
}
