syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.World.Server.Protos.Responses";

message RWSPartyAcceptResponse
{
		bool Result = 1;
}
